# embedding_model_benchmarking

./: .gitignore  ARCHITECTURE.md  COMPREHENSIVE_OVERVIEW.md  DEPLOYMENT.md  DESIGN.md  MODELS.md  QUICKSTART.md  QUICK_START.md  README.md  deploy.sh  docker-compose.yml
config/: benchmark.yaml  models.yaml
cpp/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  benchmark_comparison.py  deploy.sh  install_onnxruntime.sh  install_openvino.sh  load_test.py  setup.sh
cpp/onnx_runtime/: CMakeLists.txt  build.sh  main.cpp
cpp/openvino/: CMakeLists.txt  build.sh  main.cpp
cpp/terraform/: README.md  main.tf  outputs.tf  user_data.sh  variables.tf
docker/benchmark_client/: Dockerfile  benchmark_client.py
docker/onnx_python/: Dockerfile  benchmark.py
docker/onnx_python/server/: Dockerfile  server.py
docker/openvino/server/: Dockerfile  server.py
docker/pytorch/: Dockerfile  benchmark.py
docker/pytorch/server/: Dockerfile  server.py
orchestrator/: runner.py
results/: embeddinggemma-300m.csv
results/embeddinggemma-300m/: onnx-python.json  onnx-rust.json  openvino.json  pytorch.json
rust/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
rust/benchmark_client/: Cargo.toml
rust/benchmark_client/src/: main.rs
rust/candle_server/: Cargo.toml
rust/candle_server/src/: main.rs
rust/common/: Cargo.toml
rust/common/src/: config.rs  http.rs  lib.rs  stats.rs
rust/docker/candle_server/: Dockerfile
rust/docker/onnx_server/: Dockerfile
rust/onnx_server/: Cargo.toml
rust/onnx_server/src/: main.rs  main.rs.bak
rust/scripts/: deploy.sh  run_benchmark.sh  run_candle_benchmark.sh
rust/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
scripts/: add_model_prefix.py  convert_to_onnx.py  convert_to_openvino.py  download_model.py  huggingface_login.sh  setup.sh
terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
