[workspace]
members = [
    "common",
    "benchmark_client",
    "onnx_server",
    "candle_server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Benchmark Team"]

[workspace.dependencies]
# Common dependencies
common = { path = "common" }

# HTTP & Web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ML Runtimes
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "copy-dylibs"] }
tokenizers = "0.20"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ndarray = "0.16"

# System monitoring
sysinfo = "0.31"

# Progress bars
indicatif = "0.17"

# Statistics
statrs = "0.17"

# Time
chrono = "0.4"

# Environment
dotenvy = "0.15"
