[package]
name = "onnx_server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# ML Runtime
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Environment
dotenvy = { workspace = true }
